# topologyGUI

./: CMakeLists.txt  README.md  blockContainer.h  ctr.cpp  fichier_contrainte_2D  fichier_contrainte_2D.txt  fichier_contrainte_2D2D_generated.txt  fichier_contrainte_2D_generated.txt  fichier_contrainte_2D_original_simplified.txt  fichier_contrainte_3D.txt  fichier_contrainte_hexa_simplified.txt  file_tools.hpp  imgui.ini  lineContainer.cpp  main.cpp  topologyGUI
imgui-sfml/: CMakeLists.txt
io/: cstr_file_generated.txt
src/: block.cpp  block.h  blockContainer.cpp  ctr.cpp  ctr.hpp  fichier_contrainte_2D.txt  fichier_contrainte_3D_generated.txt  gen_tools.cpp  gen_tools.h  get_from_ctr.cpp  get_from_ctr.hpp  get_from_txt.cpp  get_from_txt.hpp  get_time.cpp  graphics_utilities.cpp  graphics_utilities.h  line.cpp  line.h  lineContainer.cpp  lineContainer.h  log.h  main.cpp  surface.cpp  surface.h  topology.cpp  topology.hpp
